--- a/translations/kangyur/placeholders/082-002_toh451-the_tantra_of_the_ornament_of_the_vajra_essence.xml
+++ b/translations/kangyur/placeholders/082-002_toh451-the_tantra_of_the_ornament_of_the_vajra_essence.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Ornament of the Vajra Essence</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajrahṛdayālaṃkāratantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vajrahṛdayālaṃkāratantra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje snying po rgyan gyi rgyud/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīvajrahṛdayālaṃkāratantranāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrīvajrahṛdayālaṃkāratantranāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal rdo rje snying po rgyan gyi rgyud ces bya ba</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-082-002-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-082-002-2">Paul Hackett</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-082-002"/>
                 <date/>
             </publicationStmt>
@@ -31,14 +32,36 @@
                     <idno source-id="O1JC114941JC12162" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:11:06.225Z" user="admin">16/12/2022 09:11:06</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-06-09T17:11:47.224Z" user="john">Text note added</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:10:35.186Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-16T09:11:00.455Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-06-09T17:11:47.224Z" type="text-version" status="0.0.2" xml:id="UT22084-082-002-3">
+                    <desc>Text note added</desc>
+                </change>
+                <change who="#john" when="2020-06-09T17:11:47.224Z" type="publication-date" xml:id="UT22084-082-002-4">
+                    <desc>Text note added</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:10:35.186Z" type="translation-status" status="3" xml:id="UT22084-082-002-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:10:35.186Z" type="text-version" status="0.0.3" xml:id="UT22084-082-002-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:11:00.455Z" type="text-version" status="0.0.4" xml:id="UT22084-082-002-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-082-002-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T09:29:11.017Z" type="text-version" status="0.0.6" xml:id="UT22084-082-002-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T10:42:59.681Z" type="translation-status" status="2.h" xml:id="UT22084-082-002-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T10:42:59.681Z" type="text-version" status="0.0.7" xml:id="UT22084-082-002-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
