--- a/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
+++ b/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
@@ -7,15 +7,16 @@
                 <title type="mainTitle" xml:lang="en">Sūtra on Times for the Gong</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Gaṇḍīsamayasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gaN+DI'i dus kyi mdo/</title>
-                <author role="translatorMain" xml:id="UT22084-071-013-1"/>
+                <author role="translatorMain" xml:id="UT22084-071-013-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-071-013-2">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-071-013-13">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-071-013"/>
                 <date/>
             </publicationStmt>
@@ -54,6 +55,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-11T12:07:54.189Z" type="text-version" status="0.0.5" xml:id="UT22084-071-013-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T12:08:27.562Z" type="text-version" status="0.0.6" xml:id="UT22084-071-013-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T11:08:39.15Z" type="translation-status" status="2.f" xml:id="UT22084-071-013-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T11:08:39.15Z" type="text-version" status="0.0.7" xml:id="UT22084-071-013-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
