--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo skul byed ma'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacundadevīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo skul byed ma zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-010-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-010-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-010-2">Adam Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-091-010-16">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +75,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-16T16:31:10.248Z" type="text-version" status="0.0.8" xml:id="UT22084-091-010-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:31:40.476Z" type="text-version" status="0.0.9" xml:id="UT22084-091-010-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T15:10:02.422Z" type="translation-status" status="2.f" xml:id="UT22084-091-010-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T15:10:02.422Z" type="text-version" status="0.0.10" xml:id="UT22084-091-010-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
