--- a/translations/kangyur/placeholders/081-011_toh442-guhyasamaja.xml
+++ b/translations/kangyur/placeholders/081-011_toh442-guhyasamaja.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Guhyasamāja</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">guhyasamāja</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsang ba 'dus pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­kāyavākcittarahasyaguhyasamāja­nāmamahākalparāja</title>
-                <title type="otherTitle" xml:lang="zh">《最上秘密大教王經》</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāgata­kāyavākcittarahasyaguhyasamāja­nāmamahākalparāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi sku gsung thugs kyi gsang chen gsang ba 'dus pa zhes bya ba brtag pa'i rgyal po chen po/</title>
-                <author role="translatorMain" ref="contributors.xml#team-55"/>
-                <author role="translatorEng" ref="contributors.xml#person-7">Paul Hackett</author>
-                <sponsor ref="sponsors.xml#sponsor-44">Anonymous</sponsor>
+                <title type="otherTitle" xml:lang="zh">《最上秘密大教王經》</title>
+                <author role="translatorMain" xml:id="UT22084-081-011-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-081-011-2">Paul Hackett</author>
+                <editor role="projectEditor" xml:id="UT22084-081-011-14">Torsten Gerloff</editor>
+                <sponsor xml:id="UT22084-081-011-3">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-081-011"/>
                 <date/>
             </publicationStmt>
@@ -33,16 +34,42 @@
                     <idno source-id="O1JC114941JC12151" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:24:01.76Z" user="admin">26/07/2022 07:24:01</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:45:57.084Z" user="admin">0.0.2</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:45:57.084Z" user="admin"/>
-                <note type="updated" update="translation-status" value="3" date-time="2021-05-19T13:44:55.712Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-19T13:44:55.712Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-19T13:45:22.735Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-01T10:04:09.964Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T07:23:54.091Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2020-08-19T10:45:57.084Z" type="text-version" status="0.0.2" xml:id="UT22084-081-011-4">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#admin" when="2020-08-19T10:45:57.084Z" type="publication-date" xml:id="UT22084-081-011-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2021-05-19T13:44:55.712Z" type="translation-status" status="3" xml:id="UT22084-081-011-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-19T13:44:55.712Z" type="text-version" status="0.0.3" xml:id="UT22084-081-011-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-19T13:45:22.735Z" type="text-version" status="0.0.4" xml:id="UT22084-081-011-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-01T10:04:09.964Z" type="text-version" status="0.0.5" xml:id="UT22084-081-011-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:23:54.091Z" type="text-version" status="0.0.6" xml:id="UT22084-081-011-10">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-081-011-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T10:08:14.196Z" type="text-version" status="0.0.8" xml:id="UT22084-081-011-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:11:57.032Z" type="translation-status" status="2.h" xml:id="UT22084-081-011-16">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:11:57.032Z" type="text-version" status="0.0.9" xml:id="UT22084-081-011-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
