--- a/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
+++ b/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
@@ -14,11 +14,11 @@
                 <editor role="copyEditor" xml:id="UT22084-072-022-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-072-022"/>
                 <date/>
             </publicationStmt>
@@ -81,6 +81,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-10T16:23:19.18Z" type="text-version" status="0.0.10" xml:id="UT22084-072-022-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:48:09.423Z" type="translation-status" status="2.c" xml:id="UT22084-072-022-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:48:09.423Z" type="text-version" status="0.0.11" xml:id="UT22084-072-022-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
