--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-094-020-29">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-16T15:09:37.924Z" type="text-version" status="0.0.11" xml:id="UT22084-094-020-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T09:16:25.132Z" type="translation-status" status="2.b" xml:id="UT22084-094-020-33">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T09:16:25.132Z" type="text-version" status="0.0.12" xml:id="UT22084-094-020-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
