--- a/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-066-013-21">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-066-013"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +80,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-19T13:56:06.488Z" type="text-version" status="0.0.10" xml:id="UT22084-066-013-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:00:45.345Z" type="translation-status" status="2.e" xml:id="UT22084-066-013-25">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:00:45.345Z" type="text-version" status="0.0.11" xml:id="UT22084-066-013-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
