--- a/translations/kangyur/placeholders/093-018_toh703-the_incantation_the_lions_roar_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-018_toh703-the_incantation_the_lions_roar_of_avalokitesvara.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Lion's Roar of Avalokiteśvara</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">avalokiteśvarāyasiṃhanādadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Avalokiteśvarāyasiṃhanādadhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs seng+ge sgra'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarāyasiṃha­nāda­nāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāvalokiteśvarāyasiṃha­nāda­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug seng ge sgra'i gzungs zhes bya ba/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <author role="translatorMain" xml:id="UT22084-093-018-1"/>
+                <author role="translatorEng" xml:id="UT22084-093-018-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-093-018"/>
                 <date/>
             </publicationStmt>
@@ -31,9 +32,33 @@
                     <idno source-id="O1JC114941JC12443" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-19T13:50:54.694Z" user="admin">19/05/2022 13:50:54</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-10T09:28:59.493Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-05-10T09:28:59.493Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-10T09:29:31.987Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-05-19T13:50:47.229Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T13:50:47.229Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-05-10T09:28:59.493Z" type="translation-status" status="3" xml:id="UT22084-093-018-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-10T09:28:59.493Z" type="text-version" status="0.0.1" xml:id="UT22084-093-018-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-10T09:29:31.987Z" type="text-version" status="0.0.2" xml:id="UT22084-093-018-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T13:50:47.229Z" type="translation-status" status="2.h" xml:id="UT22084-093-018-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T13:50:47.229Z" type="text-version" status="0.0.3" xml:id="UT22084-093-018-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-093-018-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:57:18.307Z" type="translation-status" status="2.g" xml:id="UT22084-093-018-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:57:18.307Z" type="text-version" status="0.0.5" xml:id="UT22084-093-018-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
