--- a/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
@@ -7,14 +7,15 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Lion's Roar</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">seng ge sgra'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <author role="translatorMain" xml:id="UT22084-093-019-1"/>
+                <author role="translatorEng" xml:id="UT22084-093-019-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-093-019"/>
                 <date/>
             </publicationStmt>
@@ -30,12 +31,28 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-19T13:41:22.976Z" user="admin">19/05/2022 13:41:22</note>
                 <note type="title" date-time="2022-04-27T15:56:00.73Z" user="john">Essentially the same text as Toh 912, and translated by the same translators, but a slightly different recension with a different title. Also closely related to Toh 3156 which is translated by a different translator and has further differences in content.</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-05-19T13:40:38.631Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-19T13:40:38.631Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T13:41:19.234Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-05-19T13:40:38.631Z" type="translation-status" status="2.h" xml:id="UT22084-093-019-3">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T13:40:38.631Z" type="text-version" status="0.0.2" xml:id="UT22084-093-019-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T13:41:19.234Z" type="text-version" status="0.0.3" xml:id="UT22084-093-019-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-093-019-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:58:16.277Z" type="translation-status" status="2.g" xml:id="UT22084-093-019-7">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-24T11:58:16.277Z" type="text-version" status="0.0.5" xml:id="UT22084-093-019-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
