--- a/translations/kangyur/placeholders/079-025_toh398-the_tantra_of_the_king_of_gnosis.xml
+++ b/translations/kangyur/placeholders/079-025_toh398-the_tantra_of_the_king_of_gnosis.xml
@@ -5,12 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ye shes rgyal po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">jñānarājatantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Jñānarājatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the King of Gnosis</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal ye shes rgyal po'i rgyud kyi rgyal po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrījñānarājatantrarāja</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrījñānarājatantrarāja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-025"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +29,19 @@
                     <idno source-id="O1JC114941JC12099" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:27:19 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-025-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:21:52.51Z" type="translation-status" status="3" xml:id="UT22084-079-025-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:21:52.51Z" type="text-version" status="0.0.1" xml:id="UT22084-079-025-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
