--- a/translations/kangyur/placeholders/096-071_toh822,1105-verses_of_auspiciousness_for_the_five_tathagatas.xml
+++ b/translations/kangyur/placeholders/096-071_toh822,1105-verses_of_auspiciousness_for_the_five_tathagatas.xml
@@ -5,10 +5,15 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa lnga'i bkra shis tshigs su bcad pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pañcatathāgatamaṅgalagāthā</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pañcatathāgatamaṅgalagāthā</title>
                 <title type="mainTitle" xml:lang="en">Verses of Auspiciousness for the Five Tathāgatas</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-071"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,9 +36,19 @@
                     <idno source-id="O1JC114941JC12869" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:09:20 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-071-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:26:03.245Z" type="translation-status" status="3" xml:id="UT22084-096-071-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:26:03.245Z" type="text-version" status="0.0.1" xml:id="UT22084-096-071-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
