--- a/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
+++ b/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
@@ -5,21 +5,22 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyag rdor gos sngon can gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">nīlāmbaradharavajrapāṇi­kalpa­dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Nīlāmbaradharavajrapāṇi­kalpa­dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Blue-clad Vajrapāṇi</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje gos sngon po can gyi cho ga zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryanīlāmbaradhara­vajrapāṇi­kalpanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryanīlāmbaradhara­vajrapāṇi­kalpanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lag na rdo rje gos sngon can gyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">nīlāmbaradharavajrapāṇi­kalpadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Nīlāmbaradharavajrapāṇi­kalpadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje gos sngon po can gyi cho ga zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryanīlāmbaradhara­vajrapāṇi­kalpanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryanīlāmbaradhara­vajrapāṇi­kalpanāmadhāraṇī</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-095-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -42,10 +43,21 @@
                     <idno source-id="O1JC114941JC12711" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-12T11:46:33.781Z" user="admin">12/12/2021 11:46:33</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-12T11:46:30.027Z" user="john">0.0.2</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2021-12-12T11:46:30.027Z" type="text-version" status="0.0.2" xml:id="UT22084-095-003-1">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-095-003-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:31:36.32Z" type="translation-status" status="3" xml:id="UT22084-095-003-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:31:36.32Z" type="text-version" status="0.0.4" xml:id="UT22084-095-003-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
