--- a/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyag rdor gsang ba bstan/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">guhyavajrapāṇyabhideśa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Guhyavajrapāṇyabhideśa</title>
                 <title type="mainTitle" xml:lang="en">The Secret Revelation of Vajrapāṇi</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal phyag na rdo rje gsang ba bstan pa'i rgyud/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīguhyavajra­pāṇyabhideśatantranāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrīguhyavajra­pāṇyabhideśatantranāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[in Toh:] śrīvajrapāṇiguhyābhideśatantranāma</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-083-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,10 +31,21 @@
                     <idno source-id="O1JC114941JC12175" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T12:58:58.537Z" user="admin">20/12/2019 12:58:58</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-083-011-1">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-083-011-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:35:30.68Z" type="translation-status" status="3" xml:id="UT22084-083-011-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-08T10:35:30.68Z" type="text-version" status="0.0.3" xml:id="UT22084-083-011-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
